--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "^6.6.0",
     "@types/react-big-calendar": "^1.16.1",
     "moments": "^0.0.2",
     "next": "15.2.4",
+    "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
     "react-calendar": "^5.1.0",
